--- a/BMI Calculator/Base.lproj/LaunchScreen.storyboard
+++ b/BMI Calculator/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -11,15 +12,47 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="result_background" translatesAutoresizingMaskIntoConstraints="NO" id="3Km-ak-UA8">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                                <color key="backgroundColor" red="0.26885805680000002" green="0.72156392020000004" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="BMI" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qDK-Ec-H1W">
+                                <rect key="frame" x="133" y="190" width="148" height="104"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="80"/>
+                                <color key="textColor" red="0.42947036030000002" green="0.4139785171" blue="0.64200454949999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Calculator" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tAp-gz-afj">
+                                <rect key="frame" x="132" y="302" width="150" height="42"/>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="32"/>
+                                <color key="textColor" red="0.42947036030000002" green="0.4139785171" blue="0.64200454949999997" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="3Km-ak-UA8" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="09B-mo-0nc"/>
+                            <constraint firstItem="qDK-Ec-H1W" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="146" id="7EQ-yn-wRm"/>
+                            <constraint firstAttribute="trailing" secondItem="3Km-ak-UA8" secondAttribute="trailing" id="K1N-Hb-KRz"/>
+                            <constraint firstItem="3Km-ak-UA8" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="M27-Ak-8Md"/>
+                            <constraint firstItem="tAp-gz-afj" firstAttribute="top" secondItem="qDK-Ec-H1W" secondAttribute="bottom" constant="8" id="VXI-Az-Qby"/>
+                            <constraint firstItem="qDK-Ec-H1W" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fH5-Na-HFw"/>
+                            <constraint firstAttribute="bottom" secondItem="3Km-ak-UA8" secondAttribute="bottom" id="fhM-EY-Eo0"/>
+                            <constraint firstItem="3Km-ak-UA8" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fj9-pE-Oeo"/>
+                            <constraint firstItem="tAp-gz-afj" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="z1l-Ss-zsi"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52.173913043478265" y="375"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="result_background" width="375" height="812"/>
+    </resources>
 </document>
